--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -21,7 +21,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     
         <!-- Estilos y fuentes -->
-        <link rel="stylesheet" href="../assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet" alt="Foto animada de gato comiendo">
         <link rel="icon" type="image/x-icon" href="/templates/favicon.ico">
 
