--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,7 +14,7 @@
         <meta property="og:title" content="Portafolio de JoTche | Desarrollador Web">
         <meta property="og:description" content="Explora mis proyectos, habilidades y pasiones. Programación, anime y mucho más.">
         <meta property="og:image" content="https://media.tenor.com/X1nlfLKP6toAAAAM/cat-eat.gif">
-        <meta property="og:url" content="https://tudominio.netlify.app">
+        <meta property="og:url" content="https://teclab.uct.cl/~j.estrada/">
         <meta property="og:type" content="website">
     
         <!-- Favicon -->
@@ -101,6 +101,6 @@
             <p id="successMsg"></p>
           </section>
     </footer>
-    <script src="/assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 </body>
 </html>
